--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -15,7 +15,7 @@ on:
   push:
     branches: [ codeQL_Evaluation ]
     paths-ignore:
-     - spec
+     - app
      - docs
   pull_request:
     # The branches below must be a subset of the branches above
